--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev":"nodemon server.js",
+    "dev":"nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
